# yourdle

./: .gitignore  Cargo.toml  README.md  fastly.toml
setup/: feedback.json  pops.json  stats.json
src/: game.rs  guess.rs  main.rs  page.rs  state.rs  utils.rs
src/browser/: 404.html  end.html  index.html  new.html  new.js  script.js  start.html  stats.html  style.css
