[package]
name = "yourdle"
version = "0.1.0"
authors = []
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
chrono = "0.4.26"
el-slugify = "0.1.1"
fastly = "0.9.5"
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
